# kunju

./: .gitignore  LICENSE  README.md  build_windows.ps1  pyproject.toml  run_privacy_alarm.bat  setup_and_run.bat  site_server.py  start_hidden.vbs  start_protection_hidden.vbs  vercel.json
docs/: PAYMENTS.md  RELEASE_CHECKLIST.md
installer/: PrivacyAlarm.iss
license_server/: README.md  requirements.txt  server.py
privacy_alarm/: app.py  product_config.py
site/: README.md  index.html  script.js  styles.css
